# MinecraftClone

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Colors.h  Logging.cpp  Logging.h  Player.cpp  Player.h  README.md  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  font.cpp  font.h  geometery.cpp  geometery.h  line.cpp  line.h  main.cpp  minecraft.cpp  minecraft.h  notes.txt  save.cpp  save.h  shader.h
shaders/: frag.glsl  frag_diffuse.glsl  frag_line.glsl  frag_texture.glsl  vert.glsl  vert_diffuse.glsl  vert_line.glsl  vert_texture.glsl
